# deckstream

./: .env.example  Cargo.toml  README.md  TODO.md  docker-compose.yml
src/application/: mod.rs  settings.rs
src/application/bootstrap/: jetstream.rs  mod.rs  publisher.rs  router.rs  runner.rs  stream.rs
src/domain/: mod.rs
src/domain/kernel/: error.rs  result.rs
src/domain/orders/: mod.rs  service.rs  type.rs
src/domain/requests/: service.rs  type.rs
src/infrastructure/: mod.rs
src/infrastructure/nats/: error.rs  jetstream.rs  mod.rs  publisher.rs  router.rs  runner.rs  type.rs
src/infrastructure/os/: control.rs  mod.rs  shutdown.rs
src/presentation/: mod.rs
src/presentation/broker/v1/endpoints/: events.rs  router.rs
