[package]
name = "deckstream"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.46.0"
async-trait = "0.1.89"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = "1.0.228"
